<resources>
    <string name="app_name">Watchmaker Helper</string>


    <string name="toolbar_settings">Settings</string>
    <string name="field_required">Field required</string>
    <string name="invalid_format">Invalid format</string>
    <string name="network_error_internal_server_error">Our server has an internal error</string>
    <string name="network_error_no_connection">No connection to the server</string>






    <!-- Strings related to login -->
    <string name="test_string">This is a test</string>

    <!-- Cogwheel -->
    <string name="cogwheel_calculator_name">Cogwheel Calculator</string>
    <string name="start_cog">Starting Cog</string>
    <string name="end_cog">End Cog</string>
    <string name="error">Error Margin</string>
    <string name="min_teeth">Min. number of teeth </string>
    <string name="max_teeth">Max. number of teeth</string>
    <string name="max_wheels">Max. number of cogwheels</string>
    <string name="calculate">Calculate</string>
    <string name="start_hint">1</string>
    <string name="end_hint">27.759</string>
    <string name="error_hint">0.1</string>
    <string name="min_teeth_hint">6</string>
    <string name="max_teeth_hint">120</string>
    <string name="max_wheels_hint">4</string>


</resources>
